--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,11 +6,14 @@ on:
 jobs:
   check-application:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go: ['1.19', '1.18', '1.17', '1.16', '1.15', '1.14', '1.13', '1.12']
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
         with:
-          go-version: 1.19
+          go-version: ${{ matrix.go }}
       - run: go test
       - run: go run math.go
       # - name: Set up QEMU
