--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,7 +5,7 @@ on:
       - develop 
 jobs:
   check-application:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         go: ['1.19', '1.18', '1.17', '1.15', '1.14', '1.13', '1.12']
