--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,8 +30,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ DOCKERHUB_USERNAME.DOCKERHUB_USERNAME }}
+          password: ${{ DOCKERHUB_USERNAME.DOCKERHUB_TOKEN }}
 
       - name: Build and push Docker images
       #   id: docker_build
