--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,24 +20,24 @@ jobs:
       - run: go test
       - run: go run math.go
 
-      # Docker and Push
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
+      # # Docker and Push
+      # - name: Set up QEMU
+      #   uses: docker/setup-qemu-action@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v3
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ DOCKERHUB_USERNAME.DOCKERHUB_USERNAME }}
-          password: ${{ DOCKERHUB_USERNAME.DOCKERHUB_TOKEN }}
+      # - name: Login to Docker Hub
+      #   uses: docker/login-action@v3
+      #   with:
+      #     username: ${{ DOCKERHUB_USERNAME.DOCKERHUB_USERNAME }}
+      #     password: ${{ DOCKERHUB_USERNAME.DOCKERHUB_TOKEN }}
 
-      - name: Build and push Docker images
-      #   id: docker_build
-        uses: docker/build-push-action@v6
-        with:
-          push: true
-          tags: lucaspintof5/fc2.0-ci-go:latest
+      # - name: Build and push Docker images
+      # #   id: docker_build
+      #   uses: docker/build-push-action@v6
+      #   with:
+      #     push: true
+      #     tags: lucaspintof5/fc2.0-ci-go:latest
 
     
